[workspace]
resolver = "2"
members = [
    "crates/polyontest-plugin-api",
    "crates/polyontest-protocol",
    "crates/polyontest-builtins",
    "crates/polyontest-cli",
    "crates/polyontest-rs",
    "examples/host_rust",
]
default-members = ["crates/polyontest-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/malto101/Open-PolyTest-Framework"
authors = ["Dhruv Menon"]

[workspace.dependencies]
polyontest-plugin-api = { path = "crates/polyontest-plugin-api" }
polyontest-protocol = { path = "crates/polyontest-protocol" }
polyontest-builtins = { path = "crates/polyontest-builtins" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
