[package]
name = "polyontest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PolyOnTest CLI — composition root for boards, transports, codecs, reporters"
readme = "../../README.md"

[[bin]]
name = "polyontest"
path = "src/main.rs"

[dependencies]
polyontest-plugin-api = { workspace = true }
polyontest-protocol = { workspace = true }
polyontest-builtins = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
