[package]
name = "polyontest-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOLID plugin traits for PolyOnTest (Transport, Codec, Board, Reporter, Extension)"

[dependencies]
polyontest-protocol = { workspace = true }
thiserror = { workspace = true }
