[package]
name = "polyontest-host-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "host_rust_tests"
path = "src/main.rs"

[features]
default = ["text"]
# Human-readable harness output (POLYONTEST_MINIMAL_PRINT).
text = []
# COBS stream for the CLI (omit MINIMAL_PRINT).
cobs = []

[dependencies]
polyontest-rs = { path = "../../crates/polyontest-rs", features = ["std"] }

[build-dependencies]
cc = "1"
